# BitFun

./: Cargo.toml  README.md  README.zh-CN.md  package.json
.github/workflows/: desktop-package.yml  nightly.yml
BitFun-Installer/: README.md  package-lock.json  package.json
BitFun-Installer/scripts/: build-installer.cjs  sync-model-i18n.cjs  sync-theme-i18n.cjs
BitFun-Installer/src/: App.tsx
BitFun-Installer/src-tauri/: Cargo.toml  build.rs
BitFun-Installer/src-tauri/src/: lib.rs
BitFun-Installer/src-tauri/src/installer/: commands.rs  extract.rs  registry.rs  shortcut.rs  types.rs
BitFun-Installer/src/data/: modelProviders.ts
BitFun-Installer/src/hooks/: useInstaller.ts
BitFun-Installer/src/i18n/locales/: en.json  zh.json
BitFun-Installer/src/pages/: ModelSetup.tsx  Options.tsx  ThemeSetup.tsx
BitFun-Installer/src/styles/: global.css
BitFun-Installer/src/types/: installer.ts
src/apps/relay-server/: Caddyfile  README.md  deploy.sh
src/apps/server/: README.md
src/crates/core/src/service/remote_connect/: remote_server.rs
src/crates/core/src/util/types/: config.rs
src/web-ui/src/app/: App.tsx
src/web-ui/src/app/components/NavPanel/: MainNav.tsx
src/web-ui/src/app/components/RemoteConnectDialog/: RemoteConnectDialog.tsx
src/web-ui/src/app/components/SceneBar/: SceneBar.tsx  SceneTab.tsx  types.ts
src/web-ui/src/app/components/TitleBar/: NotificationButton.tsx
src/web-ui/src/app/scenes/: SceneViewport.tsx
src/web-ui/src/app/scenes/settings/: SettingsScene.tsx  settingsConfig.ts
src/web-ui/src/app/scenes/team/: TeamView.scss  TeamView.tsx  teamStore.ts
src/web-ui/src/app/stores/: terminalSceneStore.ts
src/web-ui/src/component-library/components/: registry.tsx
src/web-ui/src/component-library/components/CodeEditor/: CodeEditor.tsx
src/web-ui/src/component-library/components/InputDialog/: InputDialog.scss  InputDialog.tsx
src/web-ui/src/component-library/components/Modal/: Modal.tsx
src/web-ui/src/component-library/preview/: main.tsx
src/web-ui/src/flow_chat/components/: CurrentSessionTitle.tsx
src/web-ui/src/flow_chat/components/TaskDetailPanel/: TaskDetailPanel.scss  TaskDetailPanel.tsx
src/web-ui/src/flow_chat/components/toolbar-mode/: ToolbarMode.tsx
src/web-ui/src/flow_chat/tool-cards/: AskUserQuestionCard.tsx  CodeReviewToolCard.tsx  CompactToolCard.scss  ContextCompressionDisplay.tsx  DefaultToolCard.tsx  FileOperationToolCard.tsx  GetFileDiffDisplay.tsx  GitToolDisplay.tsx  GlobSearchDisplay.tsx  GrepSearchDisplay.tsx  IdeControlToolCard.tsx  ImageAnalysisCard.tsx  LSDisplay.tsx  LinterToolCard.tsx  MCPToolDisplay.tsx  MermaidInteractiveDisplay.tsx  ReadFileDisplay.tsx  SkillDisplay.tsx  TaskToolDisplay.tsx  TerminalToolCard.tsx  WebSearchCard.tsx
src/web-ui/src/infrastructure/config/components/: PromptTemplateConfig.tsx  SessionConfig.tsx  index.ts
src/web-ui/src/infrastructure/config/schemas/: editor.json
src/web-ui/src/infrastructure/config/services/: modelConfigs.ts
src/web-ui/src/locales/en-US/: common.json  flow-chat.json  settings.json
src/web-ui/src/locales/zh-CN/: common.json  flow-chat.json  settings.json
(+32 files in other folders)
